--- a/global.css
+++ b/global.css
@@ -8,3 +8,4 @@ body { width: 100%;}
 #login input#send { width: 100%; float: left; background: #999; color: #fff; cursor: pointer; font-weight: bold; padding: 10px 20px; height: 50px;}
 #login input#send:hover { background: #666; border-left: 10px solid #00ffcc;}
 #login input{color: #bbb;}
+#forgot {color: #bbb; font-weight: bold}
